[gd_scene load_steps=4 format=3 uid="uid://bdrc5o50ovx7t"]

[ext_resource type="FontFile" uid="uid://ngxarfbccvdp" path="res://Resources/Fonts/2005_iannnnnCPU.ttf" id="1_sdneb"]
[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_ygog0"]
[ext_resource type="Script" path="res://Scripts/settings_panel.gd" id="3_en6at"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_ygog0")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1000
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.564706)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/Panel"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -29.5
offset_right = 31.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 48
text = "PAUSED."

[node name="ResumeButton" type="Button" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 32
text = "เล่นต่อ"

[node name="SettingsButton" type="Button" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 32
text = "ตั้งค่า"

[node name="QuitToMenuButton" type="Button" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 32
text = "ออกไปหน้าหลัก"

[node name="SettingsPanel" type="Panel" parent="ColorRect"]
visible = false
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_en6at")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/SettingsPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -77.0
offset_right = 150.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="HBoxContainer Music" type="HBoxContainer" parent="ColorRect/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 26
alignment = 1

[node name="MusicLabel" type="Label" parent="ColorRect/SettingsPanel/VBoxContainer/HBoxContainer Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 24
text = "เสียงเพลง"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="ColorRect/SettingsPanel/VBoxContainer/HBoxContainer Music"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
value = 100.0

[node name="HBoxContainer SFX" type="HBoxContainer" parent="ColorRect/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10
alignment = 1

[node name="SFXLabel" type="Label" parent="ColorRect/SettingsPanel/VBoxContainer/HBoxContainer SFX"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 24
text = "เสียงเอฟเฟค"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="ColorRect/SettingsPanel/VBoxContainer/HBoxContainer SFX"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
value = 100.0

[node name="BackButton" type="Button" parent="ColorRect/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_sdneb")
theme_override_font_sizes/font_size = 32
text = "กลับ"
